spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,6 +19,7 @@ progress {
   accent-color: #ffc6db;
   height: 150px;
   width: 500px;
+
 }
 
 #progNum {
@@ -47,7 +48,6 @@ progress {
 .prog {
   display: flex;
   flex-direction: column;
-
   margin-left: auto;
   margin-right: auto;
 }
@@ -123,7 +123,7 @@ progress {
   margin-right: auto;
   display: flex;
   width: 90vw;
-  height: 100vw;
+  height: 110vw;
   align-items: center;
   display: flex;
   flex-wrap: wrap;
@@ -155,6 +155,7 @@ progress {
   margin-right: auto;
   width: 700px;
   height: 200px;
+  
 }
 .titleImg {
   margin-bottom: 50px;
